crud api for school
